<resources>
    <string name="app_name">TrackingShipment</string>
    <string name="tracking_shipment">택배조회</string>
    <string name="tracking_number">운송장 번호 조회</string>
    <string name="pick_tracking_company">택배 회사 선택하기</string>
    <string name="hide">숨기기</string>
    <string name="do_tracking">조회하기</string>
    <string name="more">더보기</string>

    <string name="base_error_unknown">알 수 없는 오류가 발생했습니다</string>
    <string name="base_error_no_connect_network">인터넷 연결이 끊어졌습니다!</string>
    <string name="dialog_guide_close_text">확인</string>
    <string name="base_error_https">운송장 번호가 존재하지 않거나 아직 상품이\n준비중 입니다</string>
    <string name="add_new_delivery_insert_complete">택배를 추가하였습니다.</string>
    <string name="delete">삭제</string>
    <string name="delete_complete">삭제되었습니다.</string>

    <string name="delivery_item_name">물품명 : %s</string>
    <string name="delivery_item_from">보내시는 분 : %s</string>
</resources>