<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vi"
            type="com.jcy.trackingshipment.presentation.trackingItem.TrackingActivity" />

        <variable
            name="vm"
            type="com.jcy.trackingshipment.presentation.trackingItem.TrackingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.trackingItem.TrackingActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:fontFamily="@font/scdream6"
            android:text="@string/tracking_shipment"
            android:textSize="32sp" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/searchIdEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:background="@drawable/bg_edittext"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/scdream3"
                        android:hint="@string/tracking_number"
                        android:textColorHint="@color/gray_666"
                        android:minHeight="48dp"
                        android:text="@={vm.trackId}"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/carrierNameTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_edittext"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/scdream3"
                        android:gravity="center_vertical"
                        android:minHeight="48dp"
                        android:onClick="@{()->vi.onClickShowCarrierNameView()}"
                        android:text="@{vm.carrierName}"
                        android:textColor="@color/gray_666"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/searchIdEdit"
                        tools:text="택배 회사 선택" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/hideCarrierNameBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:drawableEnd="@drawable/ic_arrow_up"
                        android:minHeight="32dp"
                        android:onClick="@{()->vi.onClickHideCarrierNameView()}"
                        android:text="@string/hide"
                        android:layout_marginBottom="6dp"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:textSize="16sp"
                        android:visibleIf="@{vm.mutableCompanyListIsShowing}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/carrierNameTv"
                        tools:visibility="visible" />

                    <LinearLayout
                        android:id="@+id/pickCarrierNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:orientation="vertical"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/carrierNameTv"
                        tools:visibility="visible">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/carrierNameChipGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="16dp"
                            app:chipSpacingHorizontal="4dp"
                            app:chipSpacingVertical="4dp"
                            app:selectionRequired="true"
                            app:singleSelection="true" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/showMoreCarrierNameTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginEnd="16dp"
                            android:drawableEnd="@drawable/ic_arrow_right"
                            android:minHeight="32dp"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:onClick="@{()->vi.onClickMore()}"
                            android:text="@string/more"
                            android:layout_marginTop="6dp"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/trackingBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:background="@drawable/bg_btn_yellow"
                            android:enabled="@{vm.isValidInput}"
                            android:fontFamily="@font/scdream5"
                            android:onClick="@{()->vm.onClickTracking()}"
                            android:text="@string/do_tracking" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="6dp"
                        android:layout_marginVertical="6dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pickCarrierNameLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/trakingItemRv"
                        android:background="@color/gray_cc"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/trakingItemRv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pickCarrierNameLayout" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/searchIdEdit" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</layout>